@@ -1,7 +1,7 @@
 /*
  
 This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
+it under the terms of the GNU Library General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
 (at your option) any later version.
 
@@ -51,4 +51,3 @@ void get_apparent_posn
 	get_equ_aber (&proper_position, JD, &aberration_position);
 	get_equ_prec (&aberration_position, JD, position);
 }
-
